feat: добавить модуль и CRUD для ботов #20
